Fixed alignment and added images

--- a/client/src/assets/scss/layouts/_designer.scss
+++ b/client/src/assets/scss/layouts/_designer.scss
@@ -33,12 +33,13 @@
       /* grid-template-rows: repeat(5, 400px); */
       grid-gap: 15px;
       overflow: hidden;
-      width: 100%;
+      // width: 100%;
       // margin: 5% 5% 5% 5%;
       justify-content: center;
       justify-items: center;
       align-items: center;
       object-fit: cover;
+      margin: 1vw 1vw 0 1vw;
       
   }
 
@@ -60,7 +61,7 @@
     }  
     .gd-gallery {
         grid-template-columns: minmax(300px, 1fr);
-        margin: 0px;
+        margin: 3vw;
     }
   
   }
